--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 Devops is so interesting and I'm loving it.....
 
-<marquee behavior="" direction="Thanks for viewing ..."></marquee>
+<marquee behavior="" direction="">Thanks for viewing ...</marquee>
