--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Devops is so interesting and I'm loving it.....
+I had fun learning Jenkins today on my new website.
 
 <marquee behavior="" direction="">Thanks for viewing ...</marquee>
