--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-I had fun learning Jenkins today on my new website.
+I had fun learning Jenkins today on my new website. Jenkins is interesting
 
 <marquee behavior="" direction="">Thanks for viewing ...</marquee>
